--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript-styled-components",
+  "name": "ts-next-starter",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
@@ -100,6 +100,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.10.1",
     "husky": "^4.3.6",
     "identity-obj-proxy": "^3.0.0",
