--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-
     "analyze": "BUNDLE_ANALYZE=true yarn build",
     "lint:format": "prettier --write .",
     "lint:lint": "eslint . --ext ts --ext tsx --ext js",
@@ -80,6 +79,7 @@
     "twin.macro": "^2.0.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^10.0.6",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@types/jest": "^26.0.19",
