--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.2.1",
-    "twin.macro": "^2.3.1",
+    "twin.macro": "^2.3.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.0.9",
