--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,13 +47,31 @@
         "allow": ["warn", "error"]
       }
     ],
-    "prettier/prettier": 1,
-  
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "import/no-unresolved": "error",
-  
+
     "react/react-in-jsx-scope": 0,
     "react/display-name": 0,
     "react/prop-types": 0,
+    "react/jsx-key": [
+      2,
+      { "checkFragmentShorthand": true, "checkKeyMustBeforeSpread": true }
+    ],
+
+    "jsx-a11y/anchor-is-valid": 0,
+    "no-unused-vars": 0,
+    "@typescript-eslint/no-unused-vars": [
+      1,
+      {
+        "varsIgnorePattern": "_*",
+        "argsIgnorePattern": "^_"
+      }
+    ],
 
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
@@ -63,12 +81,6 @@
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/no-use-before-define": 0,
-    "@typescript-eslint/no-unused-vars": [
-      2,
-      {
-        "argsIgnorePattern": "^_"
-      }
-    ],
 
     "testing-library/await-async-query": "error",
     "testing-library/await-async-utils": "error",
