--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "ts-next-starter",
+  "name": "sjavier-portfolio",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "clean": "rimraf ./.next",
+    "predev": "npm run clean",
     "dev": "next dev",
+    "prebuild": "npm run clean",
     "build": "next build",
     "start": "next start",
     "test": "jest --coverage",
@@ -26,39 +29,6 @@
       "yarn lint:format"
     ]
   },
-  "next-unused": {
-    "alias": {
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@lib/*": [
-        "src/lib/*"
-      ],
-      "@pages/*": [
-        "src/pages/*"
-      ],
-      "@@root/*": [
-        "./*"
-      ],
-      "@styles/*": [
-        "styles/*"
-      ],
-      "@views/*": [
-        "src/views/*"
-      ]
-    },
-    "debug": true,
-    "include": [
-      "src/components",
-      "src/lib",
-      "src/pages",
-      "src/views"
-    ],
-    "exclude": [],
-    "entrypoints": [
-      "./src/pages"
-    ]
-  },
   "prettier": {
     "semi": false,
     "singleQuote": true,
@@ -67,38 +37,58 @@
   },
   "babelMacros": {
     "twin": {
-      "preset": "styled-components"
+      "includeClassNames": true,
+      "styled": {
+        "import": "default",
+        "from": "@emotion/styled"
+      },
+      "css": {
+        "import": "css",
+        "from": "@emotion/react"
+      },
+      "global": {
+        "import": "Global",
+        "from": "@emotion/react"
+      }
     }
   },
-  "resolutions": {
-    "styled-components": "^5"
-  },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.1.5",
     "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.0",
-    "faker": "^5.4.0",
-    "next": "^10.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-components": "^5.2.1",
-    "twin.macro": "^2.3.1"
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "0.4.0",
+    "acorn": "^8.1.0",
+    "faker": "^5.5.1",
+    "next": "10.0.9",
+    "next-themes": "^0.0.14",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "styled-breakpoints": "^10.0.0",
+    "stylis": "^4.0.9"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.2.0",
     "@next/bundle-analyzer": "^10.0.9",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@tailwindcss/jit": "^0.1.17",
+    "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/styled-components": "^5.1.9",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/react-slick": "^0.23.4",
+    "@types/tailwindcss": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "10.2.5",
     "babel-jest": "^26.6.3",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.22.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-macros": "^3.0.1",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
@@ -113,12 +103,13 @@
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.5.4",
-    "next-unused": "^0.0.6",
     "postcss": "^8.2.8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^2.0.4",
-    "typescript": "4.2.3"
+    "twin.macro": "^2.3.1",
+    "typescript": "4.2"
   }
 }
