--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,13 +73,16 @@
       }
     ],
 
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": 0,
+    
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
     "@typescript-eslint/explicit-member-accessibility": 0,
     "@typescript-eslint/indent": 0,
     "@typescript-eslint/member-delimiter-style": 0,
     "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-var-requires": 1,
     "@typescript-eslint/no-use-before-define": 0,
 
     "testing-library/await-async-query": "error",
