--- a/package.json
+++ b/package.json
@@ -57,18 +57,22 @@
     "@emotion/react": "^11.1.5",
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.1.5",
+    "@popperjs/core": "^2.9.1",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "0.4.0",
+    "@types/react-portal": "^4.0.2",
     "acorn": "^8.1.0",
     "faker": "^5.5.1",
     "next": "10.0.9",
     "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^6.15.5",
+    "react-popper": "^2.2.5",
+    "react-portal": "^4.2.1",
     "react-slick": "^0.28.1",
-    "styled-breakpoints": "^10.0.0",
-    "stylis": "^4.0.9"
+    "styled-breakpoints": "^10.0.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.2.0",
@@ -88,6 +92,7 @@
     "babel-jest": "^26.6.3",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-twin": "^1.0.2",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
