--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
     ],
     "import/no-unresolved": "error",
 
+    "react/button-has-type": 2,
     "react/react-in-jsx-scope": 0,
     "react/display-name": 0,
     "react/prop-types": 0,
