--- a/package.json
+++ b/package.json
@@ -61,14 +61,16 @@
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "0.4.0",
-    "@types/react-portal": "^4.0.2",
     "acorn": "^8.1.0",
     "faker": "^5.5.1",
+    "gsap": "^3.6.1",
     "next": "10.0.9",
     "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gsap": "^3.1.0",
     "react-hook-form": "^6.15.5",
+    "react-icons": "^4.2.0",
     "react-popper": "^2.2.5",
     "react-portal": "^4.2.1",
     "react-slick": "^0.28.1",
@@ -84,6 +86,7 @@
     "@types/node": "^14.14.37",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
+    "@types/react-portal": "^4.0.2",
     "@types/react-slick": "^0.23.4",
     "@types/tailwindcss": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
