--- a/package.json
+++ b/package.json
@@ -54,71 +54,73 @@
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
-    "@emotion/react": "^11.1.5",
-    "@emotion/server": "^11.0.0",
-    "@emotion/styled": "^11.1.5",
-    "@popperjs/core": "^2.9.1",
+    "@emotion/react": "^11.4.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@headlessui/react": "^1.2.0",
+    "@popperjs/core": "^2.9.2",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "0.4.0",
-    "acorn": "^8.1.0",
-    "faker": "^5.5.1",
+    "acorn": "^8.2.4",
+    "faker": "^5.5.3",
     "gsap": "^3.6.1",
-    "next": "10.0.9",
+    "next": "^10.2.0",
     "next-themes": "^0.0.14",
+    "next-translate": "^1.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-gsap": "^3.1.0",
-    "react-hook-form": "^6.15.5",
+    "react-gsap": "^3.2.1",
+    "react-hook-form": "^7.6.0",
     "react-icons": "^4.2.0",
     "react-popper": "^2.2.5",
     "react-portal": "^4.2.1",
     "react-slick": "^0.28.1",
-    "react-spring": "^9.0.0",
+    "react-spring": "^9.1.2",
     "styled-breakpoints": "^10.0.0"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.2.0",
-    "@next/bundle-analyzer": "^10.0.9",
-    "@tailwindcss/jit": "^0.1.17",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
+    "@emotion/babel-plugin": "^11.3.0",
+    "@next/bundle-analyzer": "^10.2.0",
+    "@tailwindcss/jit": "^0.1.18",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
+    "@types/react": "17.0.5",
+    "@types/react-dom": "17.0.5",
     "@types/react-portal": "^4.0.2",
     "@types/react-slick": "^0.23.4",
-    "@types/tailwindcss": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@types/tailwindcss": "^2.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "autoprefixer": "10.2.5",
     "babel-jest": "^26.6.3",
     "babel-plugin-inline-react-svg": "^2.0.1",
-    "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-twin": "^1.0.2",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-import": "^2.23.0",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testing-library": "^3.10.2",
-    "husky": "^5.2.0",
+    "eslint-plugin-testing-library": "^4.4.0",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
-    "jest-watch-typeahead": "^0.6.1",
-    "lint-staged": "^10.5.4",
-    "postcss": "^8.2.8",
+    "jest-watch-typeahead": "^0.6.3",
+    "lint-staged": "^11.0.0",
+    "postcss": "^8.2.15",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^2.0.4",
-    "twin.macro": "^2.3.1",
+    "tailwindcss": "^2.1.2",
+    "twin.macro": "^2.4.1",
     "typescript": "4.2"
   }
 }
