--- a/package.json
+++ b/package.json
@@ -58,12 +58,11 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@headlessui/react": "^1.2.0",
-    "@popperjs/core": "^2.9.2",
+    "@sendgrid/mail": "^7.4.4",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "0.4.0",
     "acorn": "^8.2.4",
-    "faker": "^5.5.3",
     "gsap": "^3.6.1",
     "next": "^10.2.0",
     "next-themes": "^0.0.14",
@@ -73,15 +72,11 @@
     "react-gsap": "^3.2.1",
     "react-hook-form": "^7.6.0",
     "react-icons": "^4.2.0",
-    "react-popper": "^2.2.5",
     "react-portal": "^4.2.1",
-    "react-slick": "^0.28.1",
-    "react-spring": "^9.1.2",
     "styled-breakpoints": "^10.0.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
-    "@next/bundle-analyzer": "^10.2.0",
     "@tailwindcss/jit": "^0.1.18",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -90,7 +85,6 @@
     "@types/react": "17.0.5",
     "@types/react-dom": "17.0.5",
     "@types/react-portal": "^4.0.2",
-    "@types/react-slick": "^0.23.4",
     "@types/tailwindcss": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
@@ -109,14 +103,10 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.4.0",
-    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-watch-typeahead": "^0.6.3",
-    "lint-staged": "^11.0.0",
-    "postcss": "^8.2.15",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^6.7.0",
+    "postcss": "^8.3.0",
     "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.1.2",
